[gd_scene load_steps=3 format=3 uid="uid://cvm32wjy7xf4r"]

[ext_resource type="FontFile" uid="uid://cjm3nfgjtp0ex" path="res://assets/fonts/engravers/CAT Engravers.ttf" id="1_8gs41"]
[ext_resource type="Script" path="res://src/states/menu/options_menu.gd" id="1_gx872"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gx872")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Title" type="Label" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 150)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 51.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_8gs41")
theme_override_font_sizes/font_size = 48
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="MusicVolumeLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Music Volume"
horizontal_alignment = 2

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.5

[node name="MusicVolumeValue" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 2.08165e-12)
layout_mode = 2
text = "50%"

[node name="AnimSpeedLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Animation Speed"
horizontal_alignment = 2

[node name="AnimSpeedSlider" type="HSlider" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
max_value = 4.0
value = 2.0
tick_count = 5

[node name="AnimSpeedValue" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
text = "Medium"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/GridContainer/MusicVolumeSlider" to="." method="on_music_volume_slider_change"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/GridContainer/AnimSpeedSlider" to="." method="on_anim_speed_slider_change"]
